--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,8 @@
 {
     "presets": [
-        "es2015"
+      ["@babel/preset-env", { "modules": false }]
     ],
-    "plugins": []
+    "plugins": [
+      "@babel/plugin-syntax-dynamic-import"
+    ]
 }
