--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "server-components",
   "main": "main.js",
   "scripts": {
-    "serve": "babel-node main",
-    "build": "webpack -w --mode=production",
+    "dev": "node server",
+    "serve": "cross-env NODE_ENV=production node server",
+    "debug": "node --inspect-brk server",
+    "build": "rimraf dist && npm run build:client && npm run build:server",
+    "build:client": "cross-env NODE_ENV=production webpack --config build/webpack.client.config.js --progress --hide-modules",
+    "build:server": "cross-env NODE_ENV=production webpack --config build/webpack.server.config.js --progress --hide-modules",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -24,22 +28,42 @@
   },
   "homepage": "https://github.com/zhq823/server-components#readme",
   "dependencies": {
-    "express": "^4.17.1",
-    "vue": "^2.6.12",
-    "vue-server-renderer": "^2.6.12",
-    "webpack": "^5.5.1"
+    "compression": "^1.7.4",
+    "cross-env": "^5.2.0",
+    "es6-promise": "^4.2.6",
+    "express": "^4.16.4",
+    "firebase": "^5.9.2",
+    "lru-cache": "^5.1.1",
+    "route-cache": "^0.4.4",
+    "serve-favicon": "^2.5.0",
+    "vue": "^2.6.10",
+    "vue-router": "^3.0.2",
+    "vue-server-renderer": "^2.6.10",
+    "vuex": "^3.1.0",
+    "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.3",
-    "@babel/plugin-proposal-class-properties": "^7.12.1",
-    "@babel/polyfill": "^7.12.1",
-    "@babel/preset-env": "^7.12.1",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^8.2.1",
-    "babel-preset-es2015": "^6.24.1",
-    "css-loader": "^5.0.1",
-    "vue-loader": "^15.9.5",
-    "webpack-cli": "^4.2.0"
+    "@babel/core": "^7.4.3",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/preset-env": "^7.4.3",
+    "autoprefixer": "^9.5.0",
+    "babel-loader": "^8.0.5",
+    "chokidar": "^2.1.5",
+    "css-loader": "^2.1.1",
+    "eslint": "^5.16.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^3.0.1",
+    "friendly-errors-webpack-plugin": "^1.7.0",
+    "rimraf": "^2.6.3",
+    "sw-precache-webpack-plugin": "^0.11.5",
+    "url-loader": "^1.1.2",
+    "vue-loader": "^15.7.0",
+    "vue-template-compiler": "^2.6.10",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.3.0",
+    "webpack-dev-middleware": "^3.6.1",
+    "webpack-hot-middleware": "^2.24.3",
+    "webpack-merge": "^4.2.1",
+    "webpack-node-externals": "^1.7.2"
   }
 }
