--- a/package.json
+++ b/package.json
@@ -54,7 +54,10 @@
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^3.0.1",
     "friendly-errors-webpack-plugin": "^1.7.0",
+    "node-sass": "^5.0.0",
     "rimraf": "^2.6.3",
+    "sass-loader": "^10.1.0",
+    "style-loader": "^2.0.0",
     "sw-precache-webpack-plugin": "^0.11.5",
     "url-loader": "^1.1.2",
     "vue-loader": "^15.7.0",
