--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^3.0.1",
     "friendly-errors-webpack-plugin": "^1.7.0",
+    "mini-css-extract-plugin": "^1.3.1",
     "node-sass": "^5.0.0",
     "rimraf": "^2.6.3",
     "sass-loader": "^10.1.0",
@@ -61,6 +62,7 @@
     "sw-precache-webpack-plugin": "^0.11.5",
     "url-loader": "^1.1.2",
     "vue-loader": "^15.7.0",
+    "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.10",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
