--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
   },
   "homepage": "https://github.com/zhq823/server-components#readme",
   "dependencies": {
+    "axios": "^0.21.0",
     "compression": "^1.7.4",
     "cross-env": "^5.2.0",
     "es6-promise": "^4.2.6",
     "express": "^4.16.4",
     "firebase": "^5.9.2",
     "lru-cache": "^5.1.1",
+    "qs": "^6.9.4",
     "route-cache": "^0.4.4",
     "serve-favicon": "^2.5.0",
     "vue": "^2.6.10",
